--- a/airDetails.html
+++ b/airDetails.html
@@ -2,7 +2,7 @@
  * @Description: 详情页
  * @Author: wish.WuJunLong
  * @Date: 2021-08-31 09:38:41
- * @LastEditTime: 2021-11-25 11:19:48
+ * @LastEditTime: 2021-11-25 14:18:53
  * @LastEditors: mzr
 -->
 
@@ -895,15 +895,15 @@
               : "婴") +
             "</div>" +
             '<div class="passenger_list">' +
-            '<div class="list_name">姓(First)：</div>' +
+            '<div class="list_name">姓(Last)：</div>' +
             '<div class="list_message">' +
-            passengerData[i].firstName +
+            passengerData[i].lastName +
             "</div>" +
             "</div>" +
             '<div class="passenger_list">' +
-            '<div class="list_name">名(Last)：</div>' +
+            '<div class="list_name">名(First)：</div>' +
             '<div class="list_message">' +
-            passengerData[i].lastName +
+            passengerData[i].firstName +
             "</div>" +
             "</div>" +
             '<div class="passenger_list">' +
