--- a/ticketSearch.html
+++ b/ticketSearch.html
@@ -2,7 +2,7 @@
  * @Description: 航班查询列表
  * @Author: wish.WuJunLong
  * @Date: 2021-09-06 09:22:07
- * @LastEditTime: 2021-11-24 17:39:56
+ * @LastEditTime: 2021-11-25 16:30:11
  * @LastEditors: mzr
 -->
 
@@ -310,7 +310,25 @@
             : "") +
           "</div>" +
           "</div>" +
-          "</div>";
+          (val[0].baggagePiece > 0
+            ? "<div class='item_box_tip_message'>" +
+              "<div class='message_title'>行李件数：</div>" +
+              "<div class='message_content'>" +
+              val[0].baggagePiece +
+              "件" +
+              "</div>" +
+              "</div>"
+            : "") +
+          (val[0].baggageWeight > 0
+            ? "<div class='item_box_tip_message'>" +
+              "<div class='message_title'>行李额：</div>" +
+              "<div class='message_content'>" +
+              val[0].baggageWeight +
+              "KG" +
+              "</div>" +
+              "</div>"
+            : "");
+        ("</div>");
 
         data =
           "<div class='list_item ax-lazy'>" +
